[project]
name = "examplars"
version = "0.1.0"
description = "Runnable design pattern examples"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
examplars = "patterns.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["patterns"]
